<resources>
    <string name="app_name">Me Diary</string>
    <string name="prompt_library">Prompt Library</string>
    <string name="sure_to_delete">Are you sure you want to delete?</string>
    <string name="limit_exceed">Limit exceeded! You can add only 5 photos in a day.</string>
    <string name="how_s_the_weather_today">How\'s the weather today?</string>
    <string name="how_do_you_feel_today">How do you feel today?</string>
    <string name="txt_sun">Sun</string>
    <string name="txt_mon">Mon</string>
    <string name="txt_tue">Tue</string>
    <string name="txt_wed">Wed</string>
    <string name="txt_thu">Thu</string>
    <string name="txt_fri">Fri</string>
    <string name="txt_sat">Sat</string>
    <string name="done">Done</string>

    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="separator_comma">,</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="see_all">See All</string>
    <string name="delete">Delete</string>
    <string name="no_more_prompts_to_add">No more prompts to add</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="authentication">Authentication</string>
    <string name="we_use_two_factor_authentication_to_help_ensure_you_re_the_only_person_to_access_your_account">We use two-factor authentication to help ensure you\'re the only person to access your account.</string>
    <string name="when_you_sign_in_on_any_device_you_will_verify_your_identity_using_one_of_your_other_devices_or_your_phone_number">When you sign in on any device, you will verify your identity using one of your other devices or your phone number.</string>
    <string name="security">Security</string>
    <string name="authentication_dialog_text">Biometric Authentication could not start because the user has not enabled Touch ID. Would you like to enable it from the settings</string>
    <string name="kindly_place_your_finger_for_authentication">Kindly place your finger for Authentication</string>
    <string name="device_does_not_have_fingerprint_sensor_available">Device does not have fingerprint sensor available</string>
    <string name="total_steps">steps and consumed 0 calegories today</string>
    <string name="i_walked">I walked</string>
    <string name="me_diary">Me Diary</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="plaese_select_max">Please select max</string>
    <string name="images_for_this_date"> images for this date</string>
    <string name="today">Today</string>
    <string name="floating_action_button">This is the floating action button.</string>
    <string name="mood">MOOD</string>
    <string name="mood_s">How do you feel today?</string>
    <string name="weather">WEATHER</string>
    <string name="weather_s">How\'s the weather today?</string>
    <string name="current_date">CURRENTDATE</string>
    <string name="no_data_exist">No data exist to send...</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="cloudy">Cloudy</string>
    <string name="rainy">Rainy</string>
    <string name="snowy">Snowy</string>
    <string name="sunny">Sunny</string>
    <string name="thunder">Thunder</string>
    <string name="windy">Windy</string>
    <string name="angry">Angry</string>
    <string name="cool">Cool</string>
    <string name="happy">Happy</string>
    <string name="neutral">Neutral</string>
    <string name="sad">Sad</string>
    <string name="boring">Boring</string>
    <string name="dd_mmm_yyyy">dd MMM, yyyy</string>
    <string name="selected_date">SELECTEDDATE</string>
    <string name="floating_button">Floating  Button</string>
    <string name="share_using">Share Using</string>
    <string name="special_day">Special Day</string>
    <string name="health">Health</string>
    <string name="social_interactions">Social interactions</string>
    <string name="career_development">Career Development</string>
    <string name="financial_independence">Financial Independence</string>
    <string name="family_happiness">Family Happiness</string>
    <string name="personal_development">Personal Development</string>
    <string name="its_time_to_write_daily_diary">It\'s time to write daily diary</string>
    <string name="notification_me_diary">Me Diary!</string>
    <string name="we_are_missing_you_hope_everything_fine">We are missing you! Hope everything is fine.</string>
    <string name="please_come_back_fill_your_daily_diary">Please come back and fill your daily dairy soon.</string>
    <string name="color_selection">Color Selection</string>
    <string name="select_brightness">Select Brightness</string>
    <string name="shows_selected_color_desc">Shows selected color</string>

    <!--settings screen-->
    <string name="settings">Settings</string>
    <string name="choose_color">Choose Color</string>
</resources>
