<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/calendarParent"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/back_arrow"/>

        <com.mediary.customviews.CustomTextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"/>

        <com.mediary.customviews.CustomTextView
            android:id="@+id/tvCalenderDay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14ssp"/>
    </RelativeLayout>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_alignBottom="@+id/toolbar"
        android:background="@color/grey"
    />


    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">



        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_marginTop="@dimen/_10sdp"
                      android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="6dp"
                android:weightSum="5">

                <ImageView
                    android:id="@+id/img_left"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:src="@drawable/arrow_left"
                    android:visibility="visible"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/tvSepratedComma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4sp"
                        android:text="@string/separator_comma"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/txt_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4sp"
                        android:text="@string/year"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/img_right"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:src="@drawable/arrow_right"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_calendar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="#efeaef"
                android:paddingTop="@dimen/_20sdp"
                android:paddingBottom="@dimen/_20sdp"
            />


        </LinearLayout>


        <RelativeLayout
            android:id="@+id/bottm_view"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.mediary.customviews.CustomTextView
                    android:id="@+id/tvCalenderDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20ssp"/>

                <LinearLayout android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_marginStart="@dimen/_5sdp"
                              android:orientation="vertical">

                    <com.mediary.customviews.CustomTextView
                        android:id="@+id/tvBottomDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="@dimen/_9ssp"/>

                    <com.mediary.customviews.CustomTextView
                        android:id="@+id/tvBottomYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="@dimen/_9ssp"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="match_parent"
                          android:layout_alignParentEnd="true"
                          android:layout_gravity="end">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageMood"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_3sdp"
                />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                />
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>